.provarCaches/00D410000011HE0EAM/objects/rstkf__customextf__c.object
<CustomObject>
    <description>customextf__c</description>
    <fields>
        <fullName>rstkf__acs_custdisplayfilter__c</fullName>
        <label>Customer Display Filter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Customers</fullName>
                    <default>true</default>
                    <label>All Customers</label>
                </value>
                <value>
                    <fullName>AR Balance &gt; 0</fullName>
                </value>
                <value>
                    <fullName>AR Balance &gt; 30 Days</fullName>
                </value>
                <value>
                    <fullName>AR Balance &gt; 60 Days</fullName>
                </value>
                <value>
                    <fullName>AR Balance &gt; 90 Days</fullName>
                </value>
                <value>
                    <fullName>AR Balance &gt; 120 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__acs_lastagingupdatedate__c</fullName>
        <label>Date of Last Aging Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__acs_numofrows__c</fullName>
        <label>Number Of Records</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__acs_stmtdate__c</fullName>
        <label>Date for Statement Header</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__amountpay_bankcurr__c</fullName>
        <description>Net Payment Amount – Bank Currency</description>
        <label>Net Payment Amount – Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apgrouptrans_docno__c</fullName>
        <description>Doc No.</description>
        <label>Doc No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apgrouptrans_invoice__c</fullName>
        <description>Invoice/Memo</description>
        <label>Invoice/Memo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apgrouptrans_txndategt__c</fullName>
        <description>Txn Date &gt;</description>
        <label>Txn Date &gt;</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apgrouptrans_txndatelt__c</fullName>
        <description>Txn Date &lt;</description>
        <label>Txn Date &lt;</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apgrouptrans_txntotalgt__c</fullName>
        <description>Txn Total &gt;</description>
        <label>Txn Total &gt;</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apgrouptrans_txntotallt__c</fullName>
        <description>Txn Total &lt;</description>
        <label>Txn Total &lt;</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinv_overriderate__c</fullName>
        <description>Override Rate</description>
        <inlineHelpText>Override Rate</inlineHelpText>
        <label>Override Rate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvh_vendtxnamtui__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transaction Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_maintamt__c</fullName>
        <label>Transaction Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_allStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All Batch Statuses</description>
        <inlineHelpText>All Batch Statuses</inlineHelpText>
        <label>All Session Statuses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_closedBatches__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Closed Batches</description>
        <inlineHelpText>Closed Batches</inlineHelpText>
        <label>Closed Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>apvoucher_company__c</description>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>customextf (Financial Company)</relationshipLabel>
        <relationshipName>customextf2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_dateOrVoucher__c</fullName>
        <description>Select by Date Range or by Transaction ID</description>
        <label>Select by Date Range or Transaction ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Date Range</fullName>
                </value>
                <value>
                    <fullName>Voucher Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_datePrinted__c</fullName>
        <description>apvoucher_datePrinted__c</description>
        <label>Date Printed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_fromBatchNo__c</fullName>
        <description>From Batch Number</description>
        <inlineHelpText>From Batch Number</inlineHelpText>
        <label>From Session Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_fromDate__c</fullName>
        <description>From date</description>
        <inlineHelpText>From date</inlineHelpText>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_fromTransactionID__c</fullName>
        <description>From Transaction ID</description>
        <inlineHelpText>From Transaction ID</inlineHelpText>
        <label>From Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_fromVendorCode__c</fullName>
        <description>From Vendor Number</description>
        <label>From Vendor Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_openBatches__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All Open Batches</description>
        <inlineHelpText>All Open Batches</inlineHelpText>
        <label>All Open Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_prepayind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apvoucher_prepayind__c</description>
        <label>Prepaid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_specifyVendor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specify Vendor</description>
        <label>Specify Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_throughBranchNo__c</fullName>
        <description>Through Batch Number</description>
        <inlineHelpText>Through Batch Number</inlineHelpText>
        <label>Through Session Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_throughDate__c</fullName>
        <description>Through Date</description>
        <inlineHelpText>Through Date</inlineHelpText>
        <label>Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_throughTransactionID__c</fullName>
        <description>Through Transaction ID</description>
        <inlineHelpText>Through Transaction ID</inlineHelpText>
        <label>Through Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_throughVendorCode__c</fullName>
        <description>Through Vendor Number</description>
        <inlineHelpText>Through Vendor Number</inlineHelpText>
        <label>Through Vendor Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_transferredBatches__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Posted Batches</description>
        <inlineHelpText>Transferred Batches</inlineHelpText>
        <label>Posted Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_unitprice__c</fullName>
        <description>apvoucher_unitprice__c</description>
        <label>Unit Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apvoucher_voucherEditList__c</fullName>
        <description>apvoucher_voucherEditList__c</description>
        <label>Voucher Edit List</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_agingdate__c</fullName>
        <label>Aging Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_dayslist__c</fullName>
        <description>Hidden variable</description>
        <label>Days List</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_exportasspreadsheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export Report as Spreadsheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_exportinextendedspreadsheetformat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export in Extended Spreadsheet Format</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_exportreportinprintformat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export Report in Print Format</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_includeallglaccounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include All AR Control Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_includeitemsinopenbatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Items in Open (Unposted) Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_includeoneglcontrolaccountonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select GL Control Accounts to be Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_includeunagedopenamountcolumn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include an Un-Aged &apos;Open Amount&apos; Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_noofdaysincurrentcolumn__c</fullName>
        <label>Number of Days in Current Column</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_nooffuturecolumns__c</fullName>
        <label># of Future Columns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_noofpastcolumns__c</fullName>
        <label># of Past Columns</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_printcustomerabovecolumnheadings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Customer Line Above Column Heading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_printdocumentinrefcolumn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Document # in Reference Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_printreport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_printtransactioninrefcolumn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Transaction # in Reference Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_selectedglcontrolaccount__c</fullName>
        <label>Select GL Control Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_showexpireddiscounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Expired Discounts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_totaleligiblediscounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Eligible Discounts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_totalexpireddiscounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Expired Discounts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_transcutoffdate__c</fullName>
        <description>As-Of Date</description>
        <inlineHelpText>Transaction cut-off date</inlineHelpText>
        <label>As-Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_usebackwardaging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Backward Aging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__aratb_useforwardaging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Forward Aging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt1_adhocaging__c</fullName>
        <label>Ad-Hoc Aging Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Balance &gt; 30 days old</fullName>
                </value>
                <value>
                    <fullName>Balance &gt; 60 days old</fullName>
                </value>
                <value>
                    <fullName>Balance &gt; 90 days old</fullName>
                </value>
                <value>
                    <fullName>Balance &gt; 120 days old</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt1_balanceduegreaterthan__c</fullName>
        <description>arcuststmt1_balanceduegreaterthan__c</description>
        <label>Balance Due Greater Than</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt1_finchargestatus__c</fullName>
        <label>Finance Charge Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Only with Finance Charge</fullName>
                </value>
                <value>
                    <fullName>Only without Finance Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt1_period__c</fullName>
        <description>arcuststmt1_period__c</description>
        <label>Statement Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt1_statementdelivery__c</fullName>
        <description>arcuststmt1_statementdelivery__c</description>
        <label>Customer Statement Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Print Statements</fullName>
                </value>
                <value>
                    <fullName>Email Statements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt_statementToView__c</fullName>
        <description>arcuststmt_statementToView__c</description>
        <label>Statement Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt_statement__c</fullName>
        <description>arcuststmt_statement__c</description>
        <label>Statement</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt_statementdate__c</fullName>
        <label>Statement Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt_template__c</fullName>
        <description>arcuststmt_template__c</description>
        <label>Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ardrcrmemo_batchNumber__c</fullName>
        <description>ardrcrmemo_batchNumber__c</description>
        <label>Session Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ardrcrmemo_customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer</description>
        <label>Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__ardrcrmemo_status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unbatched Postings Pending</fullName>
                </value>
                <value>
                    <fullName>Unbatched Postings Complete</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__ardrcrmemo_trantype__c</fullName>
        <description>Transaction Type</description>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Debit Memo</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Unapplied Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arinvdist_creditAcct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Credit Account</description>
        <label>Credit Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>customextf (Credit Account)</relationshipLabel>
        <relationshipName>customextf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdist_debitAcct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Debit Account</description>
        <label>Debit Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customextf3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvoicememo_status__c</fullName>
        <description>arinvoicememo_status_c</description>
        <label>Session Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Only</fullName>
                </value>
                <value>
                    <fullName>Posted Only</fullName>
                </value>
                <value>
                    <fullName>All Sessions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arinvtxn_adjAmt__c</fullName>
        <description>arinvtxn_adjAmt__c</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvtxn_exchrate_schedule__c</fullName>
        <description>arinvtxn_exchrate_schedule__c</description>
        <label>Type of Exchange Rate Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Locked-In Commitment Rate</fullName>
                </value>
                <value>
                    <fullName>Override Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arinvtxn_override_exchrate__c</fullName>
        <description>arinvtxn_override_exchrate__c</description>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvtxn_override_schedule__c</fullName>
        <description>arinvtxn_override_schedule__c</description>
        <label>Override Rate Schedule</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvtxn_totalWhtAdj__c</fullName>
        <description>arinvtxn_totalWhtAdj__c</description>
        <label>Total Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arnoncashtransfer_cust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>customextf (Customer)</relationshipLabel>
        <relationshipName>customextf2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arsalesinvoice_createdDate__c</fullName>
        <description>arsalesinvoice_createdDate__c</description>
        <label>AR Sales Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__arsalesinvoice_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>arsalesinvoice_glcmp__c</description>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>customextf (Company)</relationshipLabel>
        <relationshipName>customextf4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arsir_frdate__c</fullName>
        <label>From Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arsir_period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arsir_salesdiv__c</fullName>
        <label>Sales Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arsir_status__c</fullName>
        <label>Session Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed Only</fullName>
                </value>
                <value>
                    <fullName>Posted Only</fullName>
                </value>
                <value>
                    <fullName>All Sessions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arsir_todate__c</fullName>
        <label>To Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arsir_year__c</fullName>
        <label>Fiscal Year</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_ageondiscountduedatenetterms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Age on Discount Due Date and Net Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_ageonnettermsonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Age on Net Terms Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_agingdate__c</fullName>
        <label>Aging Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_dayslist__c</fullName>
        <label>Days List</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_exportasspreadsheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export Report as Spreadsheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_exportinextendedspreadsheetformat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export in Extended Spreadsheet Format</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_exportreportinprintformat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export Report in Print Format</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_homecurrencyonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Currency Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_includeallglaccounts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>atb_includeallglaccounts__c</description>
        <label>Include All AP Control Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_includeitemsinopenbatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Items in Open (Unposted) Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_includeoneglcontrolaccountonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select GL Control Accounts to be Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_includeunagedopenamountcolumn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include an Un-Aged &apos;Open Amount&apos; Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_noofdaysafterpaymentdate__c</fullName>
        <label>Days Between Pay Runs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_noofdaysafterpayrun__c</fullName>
        <label>Days Before Vendor Receives Payment</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_nooffuturecolumns__c</fullName>
        <label># of Future Columns</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_noofpastcolumns__c</fullName>
        <label># of Past Columns</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_printdocumentinrefcolumn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Document # in Reference Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_printreport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_printtransactioninrefcolumn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Transaction # in Reference Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_printvendorabovecolumnheadings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Vendor Line Above Column Headings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_selectedglcontrolaccount__c</fullName>
        <label>Select GL Control Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_separatediscountline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Separate Discount Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_totalhelditemsseparately__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Held Items Separately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_transcutoffdate__c</fullName>
        <description>atb_transcutoffdate__c</description>
        <inlineHelpText>Transaction cut-off / payment date</inlineHelpText>
        <label>As-Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_usebackwardaging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Backward Aging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_useforwardaging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Forward Aging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__bankacc_glacct__c</fullName>
        <description>Bank Account</description>
        <inlineHelpText>Bank Account</inlineHelpText>
        <label>Bank Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcard_fromdate__c</fullName>
        <description>From Date</description>
        <inlineHelpText>From Date</inlineHelpText>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcard_thrudate__c</fullName>
        <description>Thru Date</description>
        <inlineHelpText>Thru Date</inlineHelpText>
        <label>Thru Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcardtxn_bankacc__c</fullName>
        <description>Bank Card Account Number</description>
        <inlineHelpText>Bank Card Account Number</inlineHelpText>
        <label>Bank Card Account Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__bnkacc_paypend__c</fullName>
        <description>Settlement Pending</description>
        <inlineHelpText>Payments Pending</inlineHelpText>
        <label>Settlement Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__br2_bankstmtamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total bank statement amount</inlineHelpText>
        <label>Bank Statement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__br2_sysamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total system amount</inlineHelpText>
        <label>System Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>